Implement _hcCSSImport to read style properties from HTML attributes.
Implement mapping of HTML attributes to the corresponding CSS properties.

Update basic HTML test file to include a style attribute.

--- a/testsuite/basic.html
+++ b/testsuite/basic.html
@@ -1,85 +1,93 @@
-<HTML>
-<HEAD>
-	<TITLE>Basic HTML Test</TITLE>
-</HEAD>
-<BODY>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Basic HTML Test</title>
+  </head>
+  <body>
+    <h1>Basic HTML Test</h1>
 
-<H1>Basic HTML Test</H1>
+    <h1>Heading 1</h1>
 
-<H1>Heading 1</H1>
+    <h2>Heading 2</h2>
 
-<H2>Heading 2</H2>
+    <h3>Heading 3</h3>
 
-<H3>Heading 3</H3>
+    <h4>Heading 4</h4>
 
-<H4>Heading 4</H4>
+    <h5>Heading 5</h5>
 
-<H5>Heading 5</H5>
+    <h6>Heading 6</h6>
 
-<H6>Heading 6</H6>
+    <p>Now is the time for all good men to come to the aide of their country.</p>
 
-<P>Now is the time for all good men to come to the aide of their country.</P>
+    <pre>Now is the time for all good men to come to the aide of their country.</pre>
 
-<PRE>Now is the time for all good men to come to the aide of their country.</PRE>
+    <p>This is the Euro symbol: &euro;
 
-<P>This is the Euro symbol: &euro;
+    <pre>This is the Euro symbol: &euro;</pre>
 
-<PRE>This is the Euro symbol: &euro;</PRE>
+    <p>This is a grayscale GIF image: <img src="logo.gif"></p>
 
-<P>This is a grayscale GIF image: <IMG SRC="logo.gif"></P>
+    <p>This is a color GIF image with transparency: <img src="firefox.gif"></p>
 
-<P>This is a color GIF image with transparency: <IMG SRC="firefox.gif"></P>
+    <!-- NEED 4in -->
+    <p>This is a color JPEG image: <img src="ducks.jpg"></p>
 
-<!-- NEED 4in -->
-<P>This is a color JPEG image: <IMG SRC="ducks.jpg"></P>
+    <p>Image with border=0: <img src="left.gif" border="0">
 
-<P>Image with BORDER=0: <IMG SRC="left.gif" BORDER="0">
+    <p>Image with border=1: <img src="left.gif" border="1">
 
-<P>Image with BORDER=1: <IMG SRC="left.gif" BORDER="1">
+    <p>Image with border=2: <img src="left.gif" border="2">
 
-<P>Image with BORDER=2: <IMG SRC="left.gif" BORDER="2">
+    <p>Image with border=3: <img src="left.gif" border="3">
 
-<P>Image with BORDER=3: <IMG SRC="left.gif" BORDER="3">
+    <p>Image with border=4: <img src="left.gif" border="4">
 
-<P>Image with BORDER=4: <IMG SRC="left.gif" BORDER="4">
+    <!-- NEW PAGE -->
 
-<!-- NEW PAGE -->
+    <p align="left">This paragraph contains left-aligned text.
+    Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b>
+    <i>Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b></i>
+    <u>Now is the time for all good men to come to the aide of their country.</u>
+    <strike>Now is the time for all good men to come to the aide of their country.</strike>
+    <code>Now is the time for all good men to come to the aide of their country.</code>
 
-<P ALIGN="left">This paragraph contains left-aligned text.
-Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B>
-<I>Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B></I>
-<U>Now is the time for all good men to come to the aide of their country.</U>
-<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
-<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
+    <p align="center">This paragraph contains centered text.
+    Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b>
+    <i>Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b></i>
+    <u>Now is the time for all good men to come to the aide of their country.</u>
+    <strike>Now is the time for all good men to come to the aide of their country.</strike>
+    <code>Now is the time for all good men to come to the aide of their country.</code>
 
-<P ALIGN="center">This paragraph contains centered text.
-Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B>
-<I>Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B></I>
-<U>Now is the time for all good men to come to the aide of their country.</U>
-<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
-<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
+    <p align="right">This paragraph contains right-aligned text.
+    Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b>
+    <i>Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b></i>
+    <u>Now is the time for all good men to come to the aide of their country.</u>
+    <strike>Now is the time for all good men to come to the aide of their country.</strike>
+    <code>Now is the time for all good men to come to the aide of their country.</code>
 
-<P ALIGN="right">This paragraph contains right-aligned text.
-Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B>
-<I>Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B></I>
-<U>Now is the time for all good men to come to the aide of their country.</U>
-<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
-<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
+    <p align="justify">This paragraph contains justified text.
+    Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b>
+    <i>Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b></i>
+    <u>Now is the time for all good men to come to the aide of their country.</u>
+    <strike>Now is the time for all good men to come to the aide of their country.</strike>
+    <code>Now is the time for all good men to come to the aide of their country.</code>
 
-<P ALIGN="justify">This paragraph contains justified text.
-Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B>
-<I>Now is the time for all good men to come to the aide of their country.
-<B>Now is the time for all good men to come to the aide of their country.</B></I>
-<U>Now is the time for all good men to come to the aide of their country.</U>
-<STRIKE>Now is the time for all good men to come to the aide of their country.</STRIKE>
-<CODE>Now is the time for all good men to come to the aide of their country.</CODE>
-
-</BODY>
-</HTML>
+    <p style="color: purple; font-size: 200%;">This paragraph contains large purple text using the style attribute.
+    Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b>
+    <i>Now is the time for all good men to come to the aide of their country.
+    <b>Now is the time for all good men to come to the aide of their country.</b></i>
+    <u>Now is the time for all good men to come to the aide of their country.</u>
+    <strike>Now is the time for all good men to come to the aide of their country.</strike>
+    <code>Now is the time for all good men to come to the aide of their country.</code>
+  </body>
+</html>
